syntax = "proto3";
option java_package = "org.example.stubs";
service BankService {
  rpc convert(ConvertCurrencyRequest) returns(ConvertCurrencyResponse); //unary model
  rpc getCurrencyStream(ConvertCurrencyRequest) returns(stream ConvertCurrencyResponse); //server streaming model
  rpc performStream(stream ConvertCurrencyRequest) returns(ConvertCurrencyResponse); //client streaming model
  rpc fullCurrencyStream(stream ConvertCurrencyRequest) returns(stream ConvertCurrencyResponse); //bidirectional streaming model
}

message ConvertCurrencyRequest {
  string currencyFrom = 1;
  string currencyTo = 2;
  float amount = 3;

}

message ConvertCurrencyResponse {
  string currencyFrom = 1;
  string currencyTo = 2;
  float amount = 3;
  float result = 4;

}